[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tiles/player-orange.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.815, 11.5165 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )
knockbackTreshold = 0.1
maxKnockback = 200.0
jumpStrength = 330
moveSpeed = 150
maxSpeed = 700
maxHP = 100

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.56421 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 1 )
hframes = 4
vframes = 2
region_enabled = true
region_rect = Rect2( 0, 24, 64, 48 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="AttackPoint" type="Node2D" parent="."]
position = Vector2( 0, -1.607 )
